# cra-compliance-mcp

./: .cursorrules  .gitignore  .mcp.json  Dockerfile  README.md  acp.json  actor.json  apify-actor.json  cra-compliance.mcpb  glama.json  llms.txt  manifest.json  pyproject.toml  server.json  server.py  smithery.yaml
.well-known/: agent-card.json  agent.json  mcp-server  mcp-server-card.json
.well-known/mcp/: server-card.json
tests/: test_fuzz.py
